# Projeto-DW-Vendas-E-commerce

./: .gitignore  README.md  main.py  order_items.csv  orders.csv  products.csv  pyproject.toml  sellers.csv  setup_uv_env.sh  stores.csv
func/: conn.py
src/: insert_inicial.py
src/ETL/extract/: extrai_dados_api.py
src/api/: insert_inicial.py  routes.py
src/extract/: extrai_dados_api.py  extrair_dados_spark.py
src/transform/: customers.py
src/utils/: database.py  envia_dados_banco.py  files.py
