[project]
name = "projeto-dw-vendas-e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "minio>=7.2.18",
    "pandas>=2.3.2",
    "pyodbc>=5.2.0",
    "pyspark>=4.0.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
