[project]
name = "projeto-dw-vendas-e-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta-spark>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "minio>=7.2.18",
    "pandas>=2.3.2",
    "pyarrow>=22.0.0",
    "pyodbc>=5.2.0",
    "pyspark==4.0.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
